# GLTFConvert

./: .gitignore  AABB.h  BoundingBox.h  BoundingSphere.cpp  CMakeLists.txt  Exporter.cpp  Exporter.h  FBX2glTF-windows-x86_64.rar  GLTF2Pure.cpp  GLTFExporter.cpp  GLTFExporter.h  Geometry.cpp  Geometry.h  Importer.cpp  Importer.h  Material.h  MaterialExporter.cpp  MaterialExporter.h  MatrixEntry.h  MeshBounds.cpp  MeshBounds.h  MeshNode.h  OBB.cpp  OBB.h  PrimitiveType.h  PureGLTF.cpp  PureGLTF.h  PureMaterial.h  PureModel.cpp  PureModel.h  README.md  Scene.h  SceneBinary.cpp  SceneBinary.h  SceneBuilder.cpp  SceneExporter.h  SceneLocal.cpp  SceneLocal.h  StaticMesh.cpp  StaticMesh.h  (+9 more)
common/: FastGLTFConversions.cpp  FastGLTFConversions.h  GeometryAttribute.h  IndexType.h  VKFormat.h  VertexAttrib.h  VkFormat.cpp
convert/: AttachNodeSubMeshes.cpp  BuildPrimitives.cpp  BuildSubMeshes.cpp  ComputeMeshBounds.cpp  ComputeMeshBounds.h  ConvertInternals.h  CopyMaterials.cpp  CopyNodes.cpp  CopyScenes.cpp  CreateGeometry.cpp  GeometryMapping.cpp  UniqueGeometryMapping.h
export/: BoundingVolumesJson.cpp  BoundingVolumesJson.h  ExportFileNames.cpp  ExportFileNames.h  ExportGeometries.cpp  ExportGeometry.cpp  ExportImages.cpp  ExportImages.h  ExportPureModel.cpp  ExportScene.cpp  ExportTextures.cpp  ExportTextures.h  Exporter.h  ImageMime.cpp  ImageMime.h  ImageUsage.cpp  ImageUsage.h  MaterialExporter.cpp  MaterialExporter.h  MeshExporter.cpp  MeshExporter.h  SamplerStrings.cpp  SamplerStrings.h  SanitizeName.cpp  SanitizeName.h  SceneBinary.cpp  SceneBuilder.cpp  SceneExportBounds.cpp  SceneExportBounds.h  SceneExportBuild.cpp  SceneExportCollect.cpp  SceneExportCollect.h  SceneExportCollectTextures.cpp  SceneExportCollectTextures.h  SceneExportComputeBounds.cpp  SceneExportComputeBounds.h  SceneExportData.h  SceneExportGeometries.cpp  SceneExportGeometries.h  SceneExportJson.cpp  (+18 more)
fbx/: FBXModel.h  main_fbx.cpp
fbx/import/: FBX2Pure.cpp  FBX2Pure.h  FBXExpand_ByControlPoint.cpp  FBXExpand_ByPolygon.cpp  FBXExpand_ByPolygonVertex.cpp  FBXGeometry.cpp  FBXGeometry.h  FBXImporter.cpp  FBXImporter.h  FBXMaterialConverter.cpp  FBXMaterialConverter.h  FBXMaterialMap.cpp  FBXMaterialMap.h
gltf/: GLTFGeometry.h  GLTFImage.h  GLTFMaterial.h  GLTFMaterialImpl.h  GLTFMesh.h  GLTFModel.cpp  GLTFModel.h  GLTFNode.h  GLTFPrimitive.h  GLTFSampler.h  GLTFScene.h  GLTFTexture.h  GLTFTextureInfo.h  Geometry.h  Material.h  Mesh.h  Model.cpp  Model.h  Node.h  Primitive.h  Scene.h  ToNodeTransform.cpp  ToNodeTransform.h  main_gltf.cpp
gltf/convert/: BuildMeshes.cpp  BuildPrimitives.cpp  ComputeMeshBounds.cpp  ComputeMeshBounds.h  CopyMaterials.cpp  CopyNodes.cpp  CopyScenes.cpp  CreateGeometry.cpp  GeometryMapping.cpp  UniqueGeometryMapping.h
gltf/import/: GLTF2Pure.cpp  GLTFImage.h  GLTFImportImages.cpp  GLTFImportMaterials.cpp  GLTFImportMeshes.cpp  GLTFImportNodes.cpp  GLTFImportPrimitives.cpp  GLTFImportSamplers.cpp  GLTFImportScenes.cpp  GLTFImportTextures.cpp  GLTFImporter.cpp  GLTFImporter.h  GLTFOrientationNodes.cpp  GLTFOrientationPrimitives.cpp  SamplerMapping.cpp  SamplerMapping.h
import/: ImportMaterials.cpp  ImportMaterials.h  ImportMeshes.cpp  ImportMeshes.h  ImportNodes.cpp  ImportNodes.h  ImportPrimitives.cpp  ImportPrimitives.h  ImportScenes.cpp  ImportScenes.h  Orientation.cpp  Orientation.h  OrientationNodes.cpp  OrientationPrimitives.cpp
math/: AABB.h  BoundingBox.h  BoundingSphere.cpp  BoundingSphere.h  BoundingVolumes.cpp  BoundingVolumes.h  MeshNodeTransform.h  NodeTransform.cpp  NodeTransform.h  OBB.cpp  OBB.h  TRS.cpp  TRS.h
pure/: BoundsIndex.h  FBXMaterial.h  Geometry.h  GeometryAttribute.h  GeometryIndicesMeta.h  Image.h  LambertMaterial.h  Material.h  Mesh.h  MeshNode.cpp  MeshNode.h  Model.h  ModelCore.cpp  ModelCore.h  Node.h  NodeTransform.h  PBRMaterial.cpp  PBRMaterial.h  PhongMaterial.h  Primitive.h  Sampler.h  Scene.h  SpecGlossMaterial.h  SubMesh.h  Texture.h
